--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "classmap": ["app/helpers", "Plugin.php"]
     },
     "require": {
-        "chayka/wp": "dev-master"
+        "chayka/wp": "dev-master",
+        "chayka/email-wpp": "dev-master"
     }
 }
