--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Chayka framework implementation of Auth process",
     "minimum-stability": "dev",
     "license": "MIT",
+    "version": "0.0.1",
     "authors": [
         {
             "name": "Boris Mossounov",
